--- a/plugin.ini
+++ b/plugin.ini
@@ -1,10 +1,10 @@
 [info]
-name="Multilanguage"
-author="Patrick Murray-John"
-description="Creates limited multilanguage support for Omeka."
-license="GPLv3"
-link="https://github.com/patrickmj/Multilanguage/issues"
-support_link="https://github.com/patrickmj/Multilanguage/issues"
-version="1.0"
-omeka_minimum_version="2.1"
-omeka_target_version="2.3"
+name         = "Multilanguage"
+author       = "Patrick Murray-John, completed by Daniel Berthereau"
+description  = "Creates multilanguage support for Omeka."
+license      = "GPL-3.0"
+link         = "https://github.com/patrickmj/Multilanguage"
+support_link = "https://github.com/patrickmj/Multilanguage/issues"
+version      = "1.1"
+omeka_minimum_version = "2.1"
+omeka_target_version = "2.6.1"
